# jaxonometrics

./: .gitignore  README.md  jax_gmm.ipynb  jax_linear.ipynb  jax_lm_optim.ipynb  optax_adam_lin.ipynb  pyproject.toml  readme.md  requirements.txt  sgd_gmm.ipynb  stacked_moments.ipynb
jaxonometrics/: __init__.py  base.py  causal.py  linear.py  mle.py
jaxonometrics/gmm/: __init__.py  base.py  linear_iv.py  twostep.py
jaxonometrics/legacy/: jax_gmm.py  jax_linear.py  jax_lm_optim.py  optax_adam_lin.py  sgd_gmm.py  stacked_moments.py
nb/: linmod.ipynb
tests/: test_causal.py  test_gmm.py  test_linear.py  test_mle.py
